@@ -4,6 +4,7 @@
 
 == rufus-lru - 1.0.8    not yet released
 
+- respect maxsize (3 is 3, not 2)
 - rename #remove_lru to #do_squeeze!
 - raise ArgumentError if maxsize < 0
 
